objects/Summary_Bid__c.object
<CustomObject>
    <description>Provides bidding information of the associated Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Parent Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Summary Bids</relationshipLabel>
        <relationshipName>Summary_Bids</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>All_Time_Bids__c</fullName>
        <description>The Total number of Bids associated with the Account</description>
        <label>All Time Bids</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Bid__c</fullName>
        <description>The First Bid of the associated Account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Bid</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Bid__c</fullName>
        <description>The Latest Bid of the associated Account, populated through the Bids table in acv_prod</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Latest Bid</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MTD_Bids__c</fullName>
        <description>MTD Bids associated with this account, this will only update if the Account is still active</description>
        <label>MTD Bids</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Bid_Id__c</fullName>
        <description>Unique External Id used to identify a Dealer&apos;s Summary bid record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Summary Bid Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Summary Bid</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Summary Bid Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summary Bids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>